--- a/CCMS/Views/Shared/_LayoutCCMS.cshtml
+++ b/CCMS/Views/Shared/_LayoutCCMS.cshtml
@@ -253,7 +253,7 @@
                                         <p>#2</p>
                                     </a>
                                 </li>
-                            </ul>
+                            </ul>lp,l[lp,[jgn,
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link">
