ui design kanna

--- a/CCMS/Views/Home/Dashboard.cshtml
+++ b/CCMS/Views/Home/Dashboard.cshtml
@@ -11,12 +11,12 @@
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
-                    <h1 class="m-0">Dashboard</h1>
+                    @*<h1 class="m-0">Dashboard</h1>*@
                 </div><!-- /.col -->
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
                         <li class="breadcrumb-item"><a href="#">Home</a></li>
-                        <li class="breadcrumb-item active">Dashboard v1</li>
+                        <li class="breadcrumb-item active">Dashboard</li>
                     </ol>
                 </div><!-- /.col -->
             </div><!-- /.row -->
@@ -26,70 +26,149 @@
     <!-- Main content -->
     <section class="content">
         <div class="container-fluid">
-            <!-- Small boxes (Stat box) -->
-            <div class="row" style="font-size:11pt!important">
-                <div class="col-lg-3 col-6">
-                    <!-- small box -->
-                    <div class="small-box bg-info">
-                        <div class="inner">
-                            <h4>38500</h4>
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="card card-success card-outline direct-chat direct-chat-success">
+                        <div class="card-header">
+                            <h3 class="card-title">APPOINTMENTS</h3>
 
-                            <p>APPOINTMENTS</p>
+                            <div class="card-tools">
+                                <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                                    <i class="fas fa-minus"></i>
+                                </button>
+                            </div>
+                            <!-- /.box-tools -->
                         </div>
-                        <div class="icon">
-                            <i class="ion ion-calendar"></i>
-                        </div>
-                        <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
-                    </div>
-                </div>
-                <!-- ./col -->
-                <div class="col-lg-3 col-6">
-                    <!-- small box -->
-                    <div class="small-box bg-success">
-                        <div class="inner">
-                            <h4>22250</h4>
+                        <!-- /.box-header -->
+                        <div class="card-body" style="display: block;">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <img src="~/Content/dashboard/Images/appoinments.png" style="width:140px;height:110px;"  />
+                                    
+                                </div>
+                                <div class="col-md-6">
+                                    <i class="fa fa-spinner fa-spin" ng-if="loaderSpin"></i>
+                                    <p class="font-bold text-center" style="font-size: 30px">
+                                        <a href="">
+                                            <h3 style="text-align:center"> 38500</h3>
+                                        </a>
 
-                            <p>LODGEMENTS</p>
+                                    </p>
+                                    <h6 class="text-center">Appointments</h6>
+                                    @*<a href="#" class="text-center">More info <i class="fas fa-arrow-circle-right"></i></a>*@
+                                </div>
+                            </div>
                         </div>
-                        <div class="icon">
-                            <i class="ion ion-newspaper"></i>
-                        </div>
-                        <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                        <!-- /.box-body -->
                     </div>
+                    <!-- /.box -->
                 </div>
-                <!-- ./col -->
-                <div class="col-lg-3 col-6">
-                    <!-- small box -->
-                    <div class="small-box bg-warning" style="color:#fff!important">
-                        <div class="inner">
-                            <h4>825985</h4>
+                <div class="col-md-3">
+                    <div class="card card-success card-outline direct-chat direct-chat-success">
+                        <div class="card-header">
+                            <h5 class="card-title">LODGEMENTS</h5>
 
-                            <p>CLAIMANT POPULATION</p>
+                            <div class="card-tools">
+                                <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                                    <i class="fas fa-minus"></i>
+                                </button>
+                            </div>
+                            <!-- /.box-tools -->
                         </div>
-                        <div class="icon">
-                            <i class="ion ion-person"></i>
-                        </div>
-                        <a href="#" class="small-box-footer" style="color:#fff!important">More info <i class="fas fa-arrow-circle-right"></i></a>
-                    </div>
-                </div>
-                <!-- ./col -->
-                <div class="col-lg-3 col-6">
-                    <!-- small box -->
-                    <div class="small-box bg-danger">
-                        <div class="inner">
-                            <h4>45</h4>
+                        <!-- /.box-header -->
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <img src="~/Content/dashboard/Images/lodgements.png" style="width:140px;height:110px;"/>
+                                    
+                                </div>
+                                <div class="col-md-6">
+                                    <i class="fa fa-spinner fa-spin" ng-if="loaderSpin"></i>
+                                    <p class="font-bold text-center" style="font-size: 30px">
+                                        <a href=""><h3 style="text-align:center">22250</h3></a>
 
-                            <p>TOTAL SERVICE PROVIDER SITES</p>
+                                    </p>
+                                    <h6 class="text-center">Lodgements</h6>
+                                    @*<a href="#" class="small-box-footer text-center">More info <i class="fas fa-arrow-circle-right"></i></a>*@
+                                </div>
+                            </div>
                         </div>
-                        <div class="icon">
-                            <i class="ion ion-pie-graph"></i>
-                        </div>
-                        <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                        <!-- /.box-body -->
                     </div>
+                    <!-- /.box -->
                 </div>
-                <!-- ./col -->
+                <div class="col-md-3">
+                    <div class="card card-success card-outline direct-chat direct-chat-success">
+                        <div class="card-header">
+                            <h5 class="card-title">POPULATION</h5>
+
+                            <div class="card-tools pull-right">
+                                <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                                    <i class="fas fa-minus"></i>
+                                </button>
+                            </div>
+                            <!-- /.box-tools -->
+                        </div>
+                        <!-- /.box-header -->
+                        <div class="card-body">
+
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <img src="~/Content/dashboard/Images/population.png" style="width:140px;height:110px;" />
+                                   
+                                </div>
+                                <div class="col-md-6">
+                                    <i class="fa fa-spinner fa-spin" ng-if="loaderSpin"></i>
+                                    <p class="font-bold text-center" style="font-size: 30px">
+                                        <a href=""><h3 style="text-align:center">825985</h3></a>
+                                    </p>
+                                    <h6 class="text-center">Claimant Population</h6>
+                                    @*<a href="#" class="small-box-footer text-center">More info <i class="fas fa-arrow-circle-right"></i></a>*@
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /.box-body -->
+                    </div>
+                    <!-- /.box -->
+                </div>
+                <div class="col-md-3">
+                    <div class="card card-success card-outline direct-chat direct-chat-success">
+                        <div class="card-header">
+                            <h5 class="card-title">SERVICE</h5>
+
+                            <div class="card-tools">
+                                <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                                    <i class="fas fa-minus"></i>
+                                </button>
+                            </div>
+                            <!-- /.box-tools -->
+                        </div>
+                        <!-- /.box-header -->
+                        <div class="card-body" >
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <img src="~/Content/dashboard/Images/service.png" style="width:140px;height:110px;" />
+                                    
+                                </div>
+                                <div class="col-md-6">
+                                    <i class="fa fa-spinner fa-spin" ng-if="loaderSpin"></i>
+                                    <p class="font-bold text-center" style="font-size: 30px">
+                                        <a href="../Dashboard/ExamineDue"><h3 style="text-align:center">45</h3></a>
+                                    </p>
+                                    <h6 class="text-center">Total Service Provider Sites</h6>
+                                    @*<a href="#" class="small-box-footer text-center">More info <i class="fas fa-arrow-circle-right"></i></a>*@
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /.box-body -->
+                    </div>
+                    <!-- /.box -->
+                </div>
+
+
             </div>
-            <!-- /.row -->
+
+            
         </div><!-- /.container-fluid -->
     </section>
     <!-- /.content -->
